force-app/main/default/objects/Trip_Accommodation__c/Trip_Accommodation__c.object-meta.xml
<CustomObject>
    <label>Trip Accommodation</label>
    <nameField>
        <label>Trip Accommodation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Accommodations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>