force-app/main/default/objects/Trip_Accommodation__c/fields/Accommodation_Email__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Email__c</fullName>
    <formula>Accommodation__r.Email__c</formula>
    <label>Accommodation Email</label>
    <type>Text</type>
</CustomField>