force-app/main/default/objects/Trip_Accommodation__c/fields/Accommodation_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Phone__c</fullName>
    <formula>Accommodation__r.Phone__c</formula>
    <label>Accommodation Phone</label>
    <type>Text</type>
</CustomField>