force-app/main/default/objects/Trip_Accommodation__c/fields/Room_Description__c.field-meta.xml
<CustomField>
    <fullName>Room_Description__c</fullName>
    <label>Room Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>